z-index fix

--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ h1 {
 }
 
 #contatti{
-  z-index: 4;
+  z-index: 5;
   color: white;
   font-family: 'Dancing Script', cursive;
   position: absolute;
@@ -19,7 +19,7 @@ h1 {
 }
 
 #portfolio{
-  z-index: 4;
+  z-index: 5;
   color: white;
   font-family: 'Dancing Script', cursive;
   position: absolute;
@@ -41,7 +41,7 @@ h1 {
 }
 
 #profilo {
-  z-index: 3;
+  z-index: 4;
   display: block;
   width: 130px;
   margin-top: 35px;
@@ -103,7 +103,7 @@ h1 {
 }
 
 #Portfolio_Sheet{
-  z-index: 2;
+  z-index: 3;
   display: block;
   margin-top: 500px;
   margin-left: auto;
